home finalizada, mas ainda não responsiva

--- a/Front/index.html
+++ b/Front/index.html
@@ -33,8 +33,8 @@
                 <ul>
                     <li><a href="index.html">início</a></li>
                     <li><a href="#">alugar</a></li>
-                    <li><a href="index.html/#sobre">sobre</a></li>
-                    <li><a href="index.html/#contato">contato</a></li>
+                    <li><a href="index.html#sobre">sobre</a></li>
+                    <li><a href="index.html#contato">contato</a></li>
                     <li><a href="historico.html">histórico de viagens</a></li>
                 </ul>
             </nav>
@@ -48,13 +48,97 @@
         <main>
             <section id="banner">
                 <div id="bg_banner">
-                    <h1>Procurando um meio de transporte prático, confortável e sustentável?
+                    <h1>Procurando um meio de transporte prático, confortável e sustentável? <br>
                         Crie uma conta e alugue um de nossos carros elétricos!</h1>
 
                     <a href="cadastro.html" class="btn btn_border">CRIAR UMA CONTA</a>
                 </div>
                 <div id="mask_banner"></div>
             </section>
+
+            <section id="sobre" class="container">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/ill_car.svg">
+                        <a href="#" class="btn btn_border">ALUGAR AGORA</a>
+                    </div>
+
+                    <div class="column">
+                        <h1>Quem somos?</h1>
+                        <p>Nossa empresa é responsável por <strong>alugar elétricos recarregáveis por painéis solares</strong> para você em <strong>qualquer lugar, onde você estiver, por quanto tempo quiser.</strong> </p>
+
+                        <p>Não quer ter o trabalho de deixar onde pegou? Não tem problema, nossos carros podem ser <strong> em qualquer lugar*</strong> para facilitar a vida dos nossos clientes!</p>
+
+                        <small>* desde esteja no nosso raio de km permitidos.</small>
+                    </div>
+                </div>
+            </section>
+
+            <section id="cards" class="container">
+                <div class="row">
+                    <article class="card" id="pratico">
+                        <img src="img/map.svg">
+                        <h2>PRÁTICO</h2>
+                        <p>Alugue carros disponíveis <strong>perto de você</strong> e deixe em <strong>qualquer ponto</strong> da cidade!*</p>
+                    </article>
+
+                    <article class="card" id="sustentavel">
+                        <img src="img/sun.svg">
+                        <h2>SUSTENTÁVEL</h2>
+                        <p>Nossos carros são elétricos e  recarregados por um <strong>painél solar</strong>, uma <strong>energia sustentável e renovável!</strong></p>
+                    </article>
+
+                    <article class="card" id="moderno">
+                        <img src="img/monitor.svg">
+                        <h2>MODERNO</h2>
+                        <p>Nosso sistema é <strong>moderno e inovador.</strong> Destranque o carro do seu <strong>celular</strong> e tenha acesso a <strong>detalhes da corrida</strong> a qualquer momento!</p>
+                    </article>
+
+                    <small>* desde esteja no nosso raio de km permitidos.</small>
+                </div>
+            </section>
+
+            <section id="aluguel" class="container">
+                <h1 class="line_after">ALUGUE CARROS DISPONÍVEIS PERTO DE VOCÊ</h1>
+
+                <p>Para começar, confirme seu endereço e selecione um carro disponível perto de você:</p>
+                <input type="text" value="Av. Paulista, 1106." placeholder="Digite um endereço de origem">
+
+                <img src="img/mapa1.png">
+            </section>
+
+            <section id="contato" class="container">
+                <form>
+                    <h1 class="line_after">FICOU COM ALGUMA DÚVIDA? FALE CONOSCO:</h1>
+
+                    <label for="nome">Nome:</label>
+                    <input type="text" placeholder="Digite seu nome" id="nome">
+
+                    <label for="nome">Email:</label>
+                    <input type="text" placeholder="Digite seu email" id="email">
+
+                    <label for="mensagem">Mensagem:</label>
+                    <textarea id="mensagem" placeholder="Digite sua mensagem" rows="5"></textarea>
+
+                    <a href="#" class="btn btn_black">ENVIAR MENSAGEM</a>
+                </form>
+            </section>
         </main>
+
+        <footer>
+
+            <div class="row">
+                <h2>Fale conosco:</h2>
+                <ul class="social_media">
+                    <li><a href="#"><img src="img/icons/icon_fb.svg"></a></li>
+                    <li><a href="https://www.youtube.com/channel/UC4sgDWUic84nLQgW5AKZtiw" target="_blank"><img src="img/icons/icon_yt.svg"></a></li>
+                    <li><a href="#"><img src="img/icons/icon_linkedin.svg"></a></li>
+                </ul>
+            </div>
+
+            <p>DevZilla | Todos os direitos reservados<sup>©</sup></p>
+            <a href="mailto:devzillacompany@gmail.com">devzillacompany@gmail.com</a>
+
+        </footer>
     </body>
 </html>
