Pagina de histórico

--- a/Front/index.html
+++ b/Front/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -41,7 +41,7 @@
 
             <section>
                 <h3>Bem vindo!</h3>
-                <p>ainda não possui conta? <a href="login.html">entre</a> ou <a href="cadastro.html">cadastre-se</a></p>
+                <p>Ainda não possui conta? <a href="login.html">Entre</a> ou <a href="cadastro.html">Cadastre-se</a></p>
             </section>
         </header>
 
