Página de perfil

--- a/Front/historico.html
+++ b/Front/historico.html
@@ -53,9 +53,9 @@
             <article class="menu_lateral">
                 <nav>
                     <ul>
-                        <li>Alugar agora</li>
-                        <li class="ativo">As suas viagens</li>
-                        <li>Definições do perfil</li>
+                        <li><a href="#">Alugar agora</a></li>
+                        <li class="ativo"><a href="./historico.html">As suas viagens</a></li>
+                        <li><a href="./perfil.html">Definições do perfil</a></li>
                     </ul>
                 </nav>
             </article>
