Menu descendo junto

--- a/Front/historico.html
+++ b/Front/historico.html
@@ -43,7 +43,7 @@
         </nav>
 
         <section>
-            <h3>Bem vindo!</h3>
+            <h3 class="bemvindo_h3">Bem vindo!</h3>
             <p>Ainda não possui conta? <a href="login.html">Entre</a> ou <a href="cadastro.html">Cadastre-se</a></p>
         </section>
     </header>
@@ -164,6 +164,7 @@
         <p>DevZilla | Todos os direitos reservados<sup>©</sup></p>
         <a href="mailto:devzillacompany@gmail.com">devzillacompany@gmail.com</a>
     </footer>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
