melhora no fluxo js

--- a/Front/index.html
+++ b/Front/index.html
@@ -33,7 +33,7 @@
 
                 <ul>
                     <li><a href="index.html">início</a></li>
-                    <li><a href="#">alugar</a></li>
+                    <li><a href="index.html#aluguel">alugar</a></li>
                     <li><a href="index.html#sobre">sobre</a></li>
                     <li><a href="index.html#contato">contato</a></li>
                     <li><a href="historico.html">histórico de viagens</a></li>
