--- a/Front/historico.html
+++ b/Front/historico.html
@@ -38,7 +38,7 @@
                 <li><a href="#">alugar</a></li>
                 <li><a href="index.html#sobre">sobre</a></li>
                 <li><a href="index.html#contato">contato</a></li>
-                <li><a href="historico.html">histórico de viagens</a></li>
+                <li><a href="historico.html">minhas viagens</a></li>
             </ul>
         </nav>
 
@@ -53,9 +53,10 @@
             <article class="menu_lateral">
                 <nav>
                     <ul>
-                        <li><a href="#">Alugar agora</a></li>
-                        <li class="ativo"><a href="./historico.html">As suas viagens</a></li>
-                        <li><a href="./perfil.html">Definições do perfil</a></li>
+                        <li><a href="viagem_andamento.html">Acompanhar viagem</a></li>
+                        <li><a href="index.html#aluguel">Alugar agora</a></li>
+                        <li class="ativo"><a href="./historico.html">Minhas viagens</a></li>
+                        <li><a href="./perfil.html">Minhas informações</a></li>
                     </ul>
                 </nav>
             </article>
