--- a/Front/login.html
+++ b/Front/login.html
@@ -39,7 +39,7 @@
                 <li><a href="#">alugar</a></li>
                 <li><a href="index.html#sobre">sobre</a></li>
                 <li><a href="index.html#contato">contato</a></li>
-                <li><a href="historico.html">histórico de viagens</a></li>
+                <li><a href="historico.html">minhas viagens</a></li>
             </ul>
         </nav>
 
