validações ok, mudanças nas cores do header e footer

--- a/Front/historico.html
+++ b/Front/historico.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1 class="logo">DEVZILLA</h1>
+        <h1 class="logo">S <img src="img/icons/LOGO.png">LAR</h1>
 
         <nav class="row btns_menu">
 
@@ -35,10 +35,10 @@
 
             <ul>
                 <li><a href="index.html">início</a></li>
-                <li><a href="#">alugar</a></li>
+                <li><a href="index.html#aluguel">alugar</a></li>
                 <li><a href="index.html#sobre">sobre</a></li>
                 <li><a href="index.html#contato">contato</a></li>
-                <li><a href="historico.html">minhas viagens</a></li>
+                <li><a href="historico.html" class="menu_active">minhas viagens</a></li>
             </ul>
         </nav>
 
@@ -63,7 +63,7 @@
             <article class="opcao_alugar">
                 <h3>Consiga um carro em poucos minutos</h3>
                 <p>Reserve um carro a partir de um browser. Não é necessário instalar a aplicação.</p>
-                <button>Alugar um carro</button>
+                <a href="index.html#aluguel"><button >Alugar um carro</button></a>
             </article>
             <article class="lista_historico">
                 <div>
