--- a/Front/index.html
+++ b/Front/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <h1 class="logo">DEVZILLA</h1>
+            <h1 class="logo">S <img src="img/icons/LOGO.png">LAR</h1>
 
             <nav class="row btns_menu">
                 
@@ -308,7 +308,7 @@
 
                     <div class="column">
                         <h1>Quem somos?</h1>
-                        <p>Nossa empresa é responsável por <strong>alugar elétricos recarregáveis por painéis solares</strong> para você em <strong>qualquer lugar, onde você estiver, por quanto tempo quiser.</strong> </p>
+                        <p>A SOLAR é responsável por <strong>alugar elétricos recarregáveis por painéis solares</strong> para você em <strong>qualquer lugar, onde você estiver, por quanto tempo quiser.</strong> </p>
 
                         <p>Não quer ter o trabalho de deixar onde pegou? Não tem problema, nossos carros podem ser <strong> em qualquer lugar*</strong> para facilitar a vida dos nossos clientes!</p>
 
@@ -394,5 +394,6 @@
         </footer>
 
         <script src="js/script.js"></script>
+        <script src="js/script_index.js"></script>
     </body>
 </html>
