--- a/Front/viagem_andamento.html
+++ b/Front/viagem_andamento.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <h1 class="logo">DEVZILLA</h1>
+        <h1 class="logo">S <img src="img/icons/LOGO.png">LAR</h1>
 
         <nav class="row btns_menu">
 
@@ -40,7 +40,7 @@
                 <li><a href="index.html#aluguel">alugar</a></li>
                 <li><a href="index.html#sobre">sobre</a></li>
                 <li><a href="index.html#contato">contato</a></li>
-                <li><a href="historico.html">minhas viagens</a></li>
+                <li><a href="historico.html" class="menu_active">minhas viagens</a></li>
             </ul>
         </nav>
 
@@ -322,7 +322,7 @@
         </section>
     </main>
 
-    <footer style="background-color: #5465FF;">
+    <footer style="background-color: #282C55;">
         <div class="row">
             <h2>Fale conosco:</h2>
             <ul class="social_media">
